--- a/frontend/app/views/home.html
+++ b/frontend/app/views/home.html
@@ -3,7 +3,7 @@
       <md-list class="plugin-list">
          <md-subheader class='topic'>
             Trending
-            <i class="fa fa-fire"></i>
+            <i class="fa fa-fire red"></i>
          </md-subheader>
          <span class='legend'>A recent, relative, increase in installs</span>
          <md-list-item ng-repeat="plugin in trending">
@@ -21,7 +21,7 @@
       <md-list class="plugin-list">
          <md-subheader class='topic'>
             New
-            <i class="fa fa-plus"></i>
+            <i class="fa fa-plus darkblue"></i>
          </md-subheader>
          <span class='legend'>Just added to catalog</span>
       </md-list>
@@ -31,7 +31,7 @@
       <md-list class="plugin-list">
          <md-subheader class='topic'>
             Popular
-            <i class="fa fa-trophy"></i>
+            <i class="fa fa-trophy teal"></i>
          </md-subheader>
          <span class='legend'>With the most unique installs</span>
          <md-list-item ng-repeat="plugin in popular">
@@ -49,7 +49,7 @@
       <md-list class="plugin-list">
          <md-subheader class='topic'>
             Updated
-            <i class="fa fa-refresh"></i>
+            <i class="fa fa-refresh green"></i>
          </md-subheader>
          <span class='legend'>When the plugin was last updated</span>
          <md-list-item ng-repeat="plugin in updated">
@@ -75,7 +75,7 @@
       <md-list class="plugin-list">
          <md-subheader class='topic'>
             Authors
-            <i class="fa fa-user"></i>
+            <i class="fa fa-user yellow"></i>
          </md-subheader>
          <span class='legend'>With the most plugins</span>
          <md-list-item ng-repeat="author in authors">
