--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -9,9 +9,9 @@
 		</div>		
 
       <div class='pills' flex>
-         <span class='pill bg_green'>0.90</span>
-         <span class='pill bg_green'>0.85</span>
-         <span class='pill bg_green'>0.83</span>
+         <span class='pill bg_lightblue'>0.90</span>
+         <span class='pill bg_lightblue'>0.85</span>
+         <span class='pill bg_lightblue'>0.83</span>
          <span class="downloads">
             <span class='pill bg_red'>
                37k
@@ -24,7 +24,7 @@
 
       <span class='download'>
    		<md-button class="md-fab md-primary md-raised">
-            <i class="fa fa-download"></i>
+            <i class="fa fa-2x fa-download white"></i>
             <md-tooltip>Download</md-tooltip>
          </md-button>
       </span>
