--- a/frontend/app/views/search.html
+++ b/frontend/app/views/search.html
@@ -19,9 +19,9 @@
 				</div>
 
             <div class='pills' flex>
-               <span class='pill bg_green'>0.90</span>
-               <span class='pill bg_green'>0.85</span>
-               <span class='pill bg_green'>0.83</span>
+               <span class='pill bg_lightblue'>0.90</span>
+               <span class='pill bg_lightblue'>0.85</span>
+               <span class='pill bg_lightblue'>0.83</span>
                <span class="downloads" flex>
                   <span class='pill bg_red'>
                      37k
