fix plugin icon with a placeholder

--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -1,7 +1,7 @@
 <div layout="column" class="plugin">
 
 	<div layout="row">
-      <i class="icon fa fa-2x fa-smile-o"></i>
+      <img class="icon" src="http://placehold.it/60x60">
 
 		<div flex>			
 			<h2>{{plugin.name}}</h2>
