add pointer cursor  on ratebox

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -175,6 +175,7 @@ nav
                 label + span 
                     display: table-cell
 rate-box
+    cursor: pointer
     i.fa
         color: $green
         font-size: 25px
