change stars colors

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -177,7 +177,7 @@ nav
 rate-box
     cursor: pointer
     i.fa
-        color: $green
+        color: $yellow
         font-size: 25px
         &.hover
             color: $lightblue
