implementing support for short and long descriptions

--- a/frontend/app/views/search.html
+++ b/frontend/app/views/search.html
@@ -34,7 +34,7 @@
 
 			</div>
 			<div class="description">
-				<p ng-bind-html="plugin.description | unsafe"></p>
+				<p ng-bind-html="plugin.short_description | unsafe"></p>
 			</div>
 		</div>
 	</div>
