--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -35,7 +35,7 @@
 			<md-tabs md-dynamic-height>
 				<md-tab ng-repeat="description in plugin.descriptions" label="{{description.lang}}">
 					<md-content class="md-padding description">
-						<p ng-bind-html="description.description | unsafe"></p>
+						<p ng-bind-html="description.long_description | unsafe"></p>
 					</md-content>
 				</md-tab>
 			</md-tabs>
