--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -1,76 +1,4 @@
-$white:         #FFF
-$black:         #000
-$red:           #ff8a80
-$green:         #7ABD57
-$teal:          #009688
-$verylightgrey: #F4F4F4
-$lightgrey:     #DADADA
-$grey:          #949494
-$darkgrey:      #555
-$dark:          #2C2C2C
-$blue:          #3f51b5
-$lightblue:     #8CABDB
-$darkblue:      #6F92BA
-$yellow:        #FEC95C
-
-
-.bg_white         
-    background-color: $white
-.bg_black         
-    background-color: $black
-.bg_red           
-    background-color: $red
-.bg_green         
-    background-color: $green
-.bg_teal
-    background-color: $teal
-.bg_verylightgrey 
-    background-color: $verylightgrey
-.bg_lightgrey     
-    background-color: $lightgrey
-.bg_grey          
-    background-color: $grey
-.bg_darkgrey      
-    background-color: $darkgrey
-.bg_dark          
-    background-color: $dark
-.bg_blue          
-    background-color: $blue
-.bg_lightblue     
-    background-color: $lightblue
-.bg_darkblue      
-    background-color: $darkblue
-.bg_yellow        
-    background-color: $yellow
-
-.white         
-    color: $white
-.black         
-    color: $black
-.red           
-    color: $red
-.green         
-    color: $green
-.teal
-    color: $teal
-.verylightgrey 
-    color: $verylightgrey
-.lightgrey     
-    color: $lightgrey
-.grey          
-    color: $grey
-.darkgrey      
-    color: $darkgrey
-.dark          
-    color: $dark
-.blue          
-    color: $blue
-.lightblue     
-    color: $lightblue
-.darkblue      
-    color: $darkblue
-.yellow        
-    color: $yellow
+@import 'colors'
 
 body
     font-family: 'Roboto'
@@ -93,6 +21,9 @@ h4
 
 ul li
     list-style-type: none
+
+.md-primary
+    color: #642626
 
 .header
     margin-bottom: 30px
@@ -228,6 +159,14 @@ rate-box
 .result:nth-child(even)
     background-color: $verylightgrey
 
+.submit
+
+
+.xml_description
+    background-color: $verylightgrey
+    margin-top: 20px
+    line-height: 1.2
+    font-size: .9em
 .footer
     position: fixed
     bottom: 0
