coorectly displaying logo on plugin page

--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -1,7 +1,7 @@
 <div layout="column" class="plugin">
 
 	<div layout="row">
-      <img class="icon" src="http://placehold.it/60x60">
+      <img class="icon" src="{{plugin.logo_url}}">
 
 		<div flex>			
 			<h2>{{plugin.name}}</h2>
