add recaptcha on submit page

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -23,7 +23,7 @@ ul li
     list-style-type: none
 
 .md-primary
-    color: #642626
+    color: #642626 !important
 
 .header
     margin-bottom: 30px
