--- a/frontend/app/views/submit.html
+++ b/frontend/app/views/submit.html
@@ -7,9 +7,9 @@
       <input ng-model="url" type="url">
    </md-input-container>
 
-   <!-- <div vc-recaptcha
+   <div vc-recaptcha
         theme="light"
-        key="6LfvmwoTAAAAANxv0KzTuTr-MEnYGjzTqG6-sbFZ"></div> -->
+        key="'6LfvmwoTAAAAANxv0KzTuTr-MEnYGjzTqG6-sbFZ'"></div>
 
    <md-button class="md-raised md-primary submit-button">
       Submit
