--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -14,9 +14,11 @@ a
     color: $blue 
     text-decoration: none
 
-h2, h4
+h2
     margin: 0
+    color: rgba(0,0,0,0.54)
 h4
+    margin: 0
     color: $grey 
 
 ul li
