complete contact page

--- a/frontend/app/views/submit.html
+++ b/frontend/app/views/submit.html
@@ -1,5 +1,5 @@
 <form class="submit">
-   <h2>Submit your plugin</h2>
+   <h2>Submit your plugin!</h2>
    <span class="legend">
       Please, provide the url describing your plugin 
    </span>
