--- a/frontend/app/views/submit.html
+++ b/frontend/app/views/submit.html
@@ -1,7 +1,7 @@
 <form class="submit">
    <h2>Submit your plugin!</h2>
    <span class="legend">
-      Please, provide the url describing your plugin 
+      Please, provide the url describing your plugin.
    </span>
 
    <md-input-container>
