icons in forms, contact form responsive

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -58,6 +58,30 @@ nav
         border-left-color: $darkblue
         color: $black
 
+.picbox:after 
+    font-family: FontAwesome
+    position: absolute
+    color: $grey
+    right: 10px
+    top: 28px
+.picbox.md-input-focused:after 
+    color: $red
+.searchbox:after 
+    content: "\f002"
+    color: $lightgrey
+.urlbox:after 
+    content: "\f0c1"
+.firstnamebox:after 
+    content: "\f007"
+.realnamebox:after 
+    content: "\f007"
+.emailbox:after 
+    content: "\f003"
+.subjectbox:after 
+    content: "\f040"
+.messagebox:after 
+    content: "\f0e5"
+
 .pill 
     border-radius: 5px
     padding: 2px 4px
