--- a/frontend/app/views/submit.html
+++ b/frontend/app/views/submit.html
@@ -4,7 +4,7 @@
       Please, provide the url describing your plugin.
    </span>
 
-   <md-input-container>
+   <md-input-container class="urlbox picbox">
       <label>URL</label>
       <input ng-model="url" type="url">
    </md-input-container>
