align element of plugin header at bottom

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -89,7 +89,12 @@ nav
 
 .icon 
     margin-right: 10px
-    
+    max-width: 50px
+    max-height: 50px
+ 
+.plugin_header
+    border-bottom: 1px dashed $lightgrey
+    padding-bottom: 5px
 .plugin
     margin-top: 35px
     min-height: 500px
@@ -98,7 +103,6 @@ nav
     h2 
         text-transform: capitalize
     .author, .download
-        height: 0
         i 
             vertical-align: middle
     .tabs
