--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -1,6 +1,6 @@
 <div layout="column" class="plugin">
 
-    <div layout="row">
+	<div layout="row" layout-align="center end" class="plugin_header">
       <img class="icon" src="{{plugin.logo_url}}">
 
         <div flex>          
