--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -60,11 +60,11 @@
                 </li>
                 <li>
                     <label>Homepage</label>
-                    <span><a href="{{plugispanomepage_url}}">{{plugin.homepage_url}}</a></td>
+                    <span><a href="{{plugin.homepage_url}}">{{plugin.homepage_url}}</a></td>
                 </li>
                 <li>
                     <label>Issues</label>
-                    <span><a href="{{pluspan.issues_url}}">{{plugin.issues_url}}</a></td>
+                    <span><a href="{{plugin.issues_url}}">{{plugin.issues_url}}</a></td>
                 </li>
                 <li>
                     <label>Added</label>
