download link works

--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -23,7 +23,7 @@
       <rate-box flex current-note="plugin.note" already-rated="false" rate-method="ratePlugin"></rate-box>
 
       <span class='download'>
-        <md-button class="md-fab md-primary md-raised">
+        <md-button class="md-fab md-primary md-raised" ng-click="download()">
             <i class="fa fa-2x fa-download white"></i>
             <md-tooltip>Download</md-tooltip>
          </md-button>
