--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -3,7 +3,6 @@
 body
     font-family: 'Roboto'
     font-size: 15px
-    line-height: 1.5
 
 .main
     padding: 0 0 50px 15px
@@ -95,6 +94,8 @@ nav
 .plugin_header
     border-bottom: 1px dashed $lightgrey
     padding-bottom: 5px
+    .plugin_name
+        margin-right: 10px
 .plugin
     margin-top: 35px
     min-height: 500px
@@ -105,6 +106,8 @@ nav
     .author, .download
         i 
             vertical-align: middle
+        .downloads
+            color: $white
     .tabs
         background-color: inherit
         .description
