review organisation of plugin header

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -3,6 +3,7 @@
 body
     font-family: 'Roboto'
     font-size: 15px
+    line-height: 1.5em
 
 .main
     padding: 0 0 50px 15px
@@ -94,8 +95,8 @@ nav
 .plugin_header
     border-bottom: 1px dashed $lightgrey
     padding-bottom: 5px
-    .plugin_name
-        margin-right: 10px
+.plugin_name
+    margin-right: 50px
 .plugin
     margin-top: 35px
     min-height: 500px
@@ -139,10 +140,11 @@ nav
                 label + span 
                     display: table-cell
 rate-box
+    margin-left: 5px
     cursor: pointer
     i.fa
         color: $yellow
-        font-size: 25px
+        font-size: 20px
         &.hover
             color: $lightblue
 
