show sortby only on non empty results

--- a/frontend/app/views/search.html
+++ b/frontend/app/views/search.html
@@ -1,5 +1,5 @@
 <div layout="column">
-	<div class="sort-filters">
+	<div class="sort-filters" ng-show="results.length">
 		<p>
 		<span>Sort by :</span>
 		<a href="" ng-click="sortByRelevance()">Relevance</a>
