fix toggle_menu position; + fix bower

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -58,6 +58,11 @@ nav
         border-left-color: $darkblue
         color: $black
 
+.toggle_menu 
+    position: absolute
+    right: 0
+    top: 0
+
 .picbox:after 
     font-family: FontAwesome
     position: absolute
