--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -9,9 +9,7 @@
         </div>      
 
       <div class='pills' flex>
-         <span class='pill bg_lightblue'>0.90</span>
-         <span class='pill bg_lightblue'>0.85</span>
-         <span class='pill bg_lightblue'>0.83</span>
+         <span ng-repeat="version in plugin.versions | subpart:3" class="pill bg_lightblue">{{version.compatibility}}</span>
          <span class="downloads">
             <span class='pill bg_red'>
                37k
