show more versions

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -93,6 +93,9 @@ nav
     margin-right: 5px
     cursor: pointer
 
+.versions_more .md-background 
+    background-color: $verylightgrey
+
 .icon 
     margin-right: 10px
     max-width: 50px
