--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -10,6 +10,13 @@
 
       <div class='pills'>
          <span ng-repeat="version in plugin.versions | subpart:3" class="pill bg_lightblue">{{version.compatibility}}</span>
+         
+         <span ng-show="plugin.versions.length > 3">
+            ...
+            <md-tooltip class="versions_more">
+               <span ng-repeat="version in plugin.versions | lastpart:3" class="pill bg_lightblue">{{version.compatibility}}</span>
+            </md-tooltip>
+         </span>
       </div>
 
       <rate-box flex current-note="plugin.note" already-rated="false" rate-method="ratePlugin"></rate-box>
