add unique filter
add missing file

--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -9,12 +9,12 @@
         </div>      
 
       <div class='pills'>
-         <span ng-repeat="version in plugin.versions | subpart:3" class="pill bg_lightblue">{{version.compatibility}}</span>
+         <span ng-repeat="version in plugin.versions | unique: 'compatibility' | subpart:3" class="pill bg_lightblue">{{version.compatibility}}</span>
          
          <span ng-show="plugin.versions.length > 3">
             ...
             <md-tooltip class="versions_more">
-               <span ng-repeat="version in plugin.versions | lastpart:3" class="pill bg_lightblue">{{version.compatibility}}</span>
+               <span ng-repeat="version in plugin.versions | unique: 'compatibility'| lastpart:3" class="pill bg_lightblue">{{version.compatibility}}</span>
             </md-tooltip>
          </span>
       </div>
