parse version in plugin page

--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -58,7 +58,7 @@
             <ul>
                 <li>
                     <label>Version</label>
-                    <span>0.0</span
+                    <span>{{plugin.versions[0].num}}</span
                 </li>
                 <li>
                     <label>Compatible With</label>
