added download count in search view

--- a/frontend/app/views/search.html
+++ b/frontend/app/views/search.html
@@ -24,7 +24,7 @@
                <span class='pill bg_lightblue'>0.83</span>
                <span class="downloads" flex>
                   <span class='pill bg_red'>
-                     37k
+                     {{plugin.downloaded}}
                      <md-tooltip>downloads</md-tooltip>
                   </span>
                </span>
