added note and download count in search

--- a/frontend/app/views/search.html
+++ b/frontend/app/views/search.html
@@ -30,7 +30,7 @@
                </span>
             </div>
 
-				<rate-box></rate-box>
+				<rate-box flex current-note="plugin.note" already-rated="true"></rate-box>
 
             <div flex></div>
 
