--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -24,7 +24,7 @@
       <span class='download'>
         <span class="downloads">
             <span class='pill bg_red'>
-               <span ng-bind-html='37000 | nrFormat'>{{plugin.downloaded}}</span>
+               <span ng-bind-html='plugin.downloaded | nrFormat'></span>
                <md-tooltip>downloads</md-tooltip>
             </span>
         </span>
