displayed most used tags list in home

--- a/frontend/app/views/home.html
+++ b/frontend/app/views/home.html
@@ -68,6 +68,12 @@
             <i class="fa fa-tags"></i>
          </md-subheader>
          <span class='legend'>With the most plugins</span>
+         <md-list-item ng-repeat="tag in tags">
+            <md-button ui-sref="">
+               <h4>{{tag.tag}}</h4>
+               <md-tooltip md-direction="right">{{tag.plugin_count}} plugins</md-tooltip>
+            </md-button>
+         </md-list-item>
       </md-list>
    </md-content>
 
