added 'tagged on x plugins' text

--- a/frontend/app/views/home.html
+++ b/frontend/app/views/home.html
@@ -71,7 +71,7 @@
          <md-list-item ng-repeat="tag in tags">
             <md-button ui-sref="">
                <h4>{{tag.tag}}</h4>
-               <md-tooltip md-direction="right">{{tag.plugin_count}} plugins</md-tooltip>
+               <md-tooltip md-direction="right">Tagged on {{tag.plugin_count}} plugins</md-tooltip>
             </md-button>
          </md-list-item>
       </md-list>
