--- a/frontend/app/views/plugin_list.html
+++ b/frontend/app/views/plugin_list.html
@@ -24,9 +24,14 @@
 				</div>
 
             <div class='pills'>
-               <span class='pill bg_lightblue'>0.90</span>
-               <span class='pill bg_lightblue'>0.85</span>
-               <span class='pill bg_lightblue'>0.83</span>
+               <span ng-repeat="version in plugin.versions | unique: 'compatibility' | subpart:3" class="pill bg_lightblue">{{version.compatibility}}</span>
+
+             <span ng-show="plugin.versions.length > 3">
+                ...
+                <md-tooltip class="versions_more">
+                   <span ng-repeat="version in plugin.versions | unique: 'compatibility' | lastpart:3" class="pill bg_lightblue">{{version.compatibility}}</span>
+                </md-tooltip>
+             </span>
                <span class="downloads" flex>
                   <span class='pill bg_red'>
                      {{plugin.downloaded}}
